# eomt

./: BUILD_VIS_CACHE_README.md  README.md  analyze_mask_png.py  inference.ipynb  main.py  pyproject.toml  requirements.txt  requirements_extra.txt  test_build_vis_cache.py
configs/: coco_panoptic_siglip2_eomt_ov.yaml  stage_a.yaml  stage_b.yaml  stage_b_B0.yaml  stage_b_B1.yaml  stage_b_B2.yaml
configs/coco/panoptic/: eomt_base_640_dir.yaml  eomt_base_640_dir_coarse.yaml
data/: coco_ov_vocab.py
datasets/: ade20k_semantic_directory.py  build_vis_cache.py  coco_panoptic_directory.py  directory_dataset.py  read_mask_annotation.py  simple_mask_reader.py  transforms.py
engine/: __init__.py  distill.py  losses.py  matcher.py
models/: __init__.py  backbone_registry.py  eomt.py  open_vocab_head.py  vit.py
models/backbones/: siglip2_vit.py
modules/: lora.py
scripts/: run_stageA_freeze.sh  run_stageB_lora16_ffn.sh  run_stageB_lora8.sh  run_stageB_lora_attn_ffn.sh  run_stageC_lora_ffn48_concat3.sh
tests/: test_local_model.py  test_mask_loss_label_sanitizer.py  test_siglip2_ov.py
tools/: common.py  test_net.py  train_net.py
training/: lightning_module.py  mask_classification_instance.py  mask_classification_loss.py  mask_classification_panoptic.py  mask_classification_panoptic_coarse.py  mask_classification_semantic.py  two_stage_warmup_poly_schedule.py
